gui/3.6/graphstudio/design-schema.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)[Next](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/3.6/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
      * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/map-data-to-graph)
      * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/load-data)
      * [Explore Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/augment-visualization-result)
      * Build Graph Patterns
        * [Visual Query Builder](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/write-queries)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/3.6/graphstudio/migrate-from-relational-database)
      * [Export And Import Solution](https://docs.tigergraph.com/gui/3.6/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.6/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/3.6/graphstudio/known-issues)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/3.6/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/3.6/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/3.6/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/3.6/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/3.6/admin-portal/monitoring/README)
        * [Logs](https://docs.tigergraph.com/gui/3.6/admin-portal/monitoring/log-viewer)
      * Management
        * [License](https://docs.tigergraph.com/gui/3.6/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)
      * [Components](https://docs.tigergraph.com/gui/3.6/admin-portal/components/README)
        * [Nginx](https://docs.tigergraph.com/gui/3.6/admin-portal/components/nginx)
        * [RESTPP](https://docs.tigergraph.com/gui/3.6/admin-portal/components/restpp)
        * [GSQL](https://docs.tigergraph.com/gui/3.6/admin-portal/components/gsql)
        * [Application Server (GUI)](https://docs.tigergraph.com/gui/3.6/admin-portal/components/gui)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/3.6/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.6/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/3.6/admin-portal/security/sso-aad)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/3.6/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/3.6/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/3.6/admin-portal/known-issues)


GraphStudio and Admin Portal 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * GraphStudio
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/3.6/modules/graphstudio/pages/design-schema.adoc)
### Contents
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_design_schema)
  * [Global View vs. Graph View](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_global_view_vs_graph_view)
  * [Add A Vertex Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_add_a_vertex_type)
  * [Add An Edge Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#add-an-edge-type-)
  * [Edit Vertex Or Edge Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#edit-vertex-or-edge-type-)
  * [Delete Vertex Or Edge Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#delete-vertex-or-edge-type-)
  * [Undo and redo](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#redo-and-undo-)
  * [View global vertex and edge types](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_view_global_vertex_and_edge_types)
  * [Publish schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#publish-schema-)
  * [Change or edit an existing schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_change_or_edit_an_existing_schema)


# Design Schema
### Contents
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_design_schema)
  * [Global View vs. Graph View](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_global_view_vs_graph_view)
  * [Add A Vertex Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_add_a_vertex_type)
  * [Add An Edge Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#add-an-edge-type-)
  * [Edit Vertex Or Edge Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#edit-vertex-or-edge-type-)
  * [Delete Vertex Or Edge Type](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#delete-vertex-or-edge-type-)
  * [Undo and redo](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#redo-and-undo-)
  * [View global vertex and edge types](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_view_global_vertex_and_edge_types)
  * [Publish schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#publish-schema-)
  * [Change or edit an existing schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_change_or_edit_an_existing_schema)


## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_design_schema)Design Schema
GraphStudio supports modifying multiple graphs within one TigerGraph instance. Read more about Multigraph at [MultiGraph - An Overview](https://docs.tigergraph.com/tigergraph-server/4.2/intro/multigraph-overview).
Designing the graph schema is the first and most important step of solving a business problem. The graph schema is the model of the problem, and all the subsequent steps depend on the graph schema.
Only certain roles have the privilege to modify a graph schema.
  1. Only the superuser and globaldesigner roles can modify the global graph schema, including creating local graphs.
  2. Only the superuser, globaldesigner, and designer roles can modify a local graph schema.

  
---  
When there is no graph schema in the system, this page will show some hints:
![design schema no graph globalview](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/design-schema-no-graph-globalview.png)
Otherwise this page will visualize the schema:
![schema](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/schema.png)
Each circle represents a vertex type, and each link represents an edge type. You can drag the circles to change their positions and zoom in or out by scrolling.
The relationship between a vertex type and a vertex instance of a graph is like the relationship between a table and one record of a table in the relational database world. The relationship between an edge type and an edge instance is similar. In the Design Schema step, the user defines vertex types and edge types to model the data schema. After the schema has been created, the next two steps, Map Data To Graph and Load Data, are for loading data into the graph.   
---  
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_global_view_vs_graph_view)Global View vs. Graph View
The superuser and globaldesigner roles can modify global vertex and edge types under Global View. Under global view, the toolbar area only contains "Publish schema", "Add a vertex type", "Add an edge type", "Edit", "Delete", "Undo" and "Redo" buttons. There will be a warning message in the working panel saying user is under global view.
![screen shot 2020 06 10 at 13.01.14](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/screen-shot-2020-06-10-at-13.01.14.png)
  1. If under global view, other pages except Home and Design Schema will be disabled.
  2. Users other than superuser and globaldesigner cannot access global view.

  
---  
Users can modify a graph schema under graph view. In a graph, there is one more in the toolbar area - "View global vertex and edge types". And for global vertex and edge types used in a graph, a little global icon is attached to them.
![schema local](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/schema-local.png)
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_add_a_vertex_type)Add A Vertex Type
Click the add vertex type button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/add_vertex_type.png) to add a vertex type. The working space will enter Add Vertex mode and the button color will change to green ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/add-vertex-mode-on.png) . Click the button again to exit Add Vertex mode. The add vertex type panel in the right:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/add-vertex-panel.png)
In this window you specify a vertex type name and primary id name. GraphStudio will automatically select a color for your vertex type icon.
In the Style section, you can change the color of your vertex icon. You can also replace the default circle using a file that you upload or choose from our icon library.
**Adding and Deleting Attributes** If you want to have a vertex or edge type’s primary ID as an attribute, check the "AS ATTRIBUTE" box. This will allow you to use the vertex or edge’s primary ID like any other attribute of the vertex or edge type in features such as filter, attachment and order.
To add an attribute, click the green plus sign at the right of the Attributes section:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/add-attribute.png)
Provide a name and data type for your new attribute. Optionally, you can specify a default value for the attribute. (If you do not specify, every data type has a system default value. For example, the default value for an integer is 0.)
For some types of attributes (INT, UINT, STRING, STRING COMPRESS, DATETIME), you can add an index, which will improve query performance when accessing these attributes.
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/attribute-with-index.png)
Click the red minus sign to the right of the attribute to delete an existing attribute.
Once you are satisfied with the vertex type settings, click the checkmark button at the top to add the vertex type. A new circle will appear in the working panel. You can drag the circle to any desired position.
`PRIMARY KEY` and composite keys are not supported in GraphStudio. If you define a vertex type using the `PRIMARY KEY` syntax or with composite key, you will not be able to operate on the graph with that vertex type or the global schema in GraphStudio.   
---  
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#add-an-edge-type-)Add An Edge Type
Click the add edge type button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/add_edge_type.png) to enter Add Edge mode and add an edge type.
Each edge type has one or many source vertex types and target vertex types. First, click the source vertex type. A hint will appear on the vertex type circle:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/click_edge_type_source_vertex.png)
Then click the target vertex type. The add edge type panel will appear to the right:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/add-edge-panel.png)
You must specify an edge type name. The source vertex type and target vertex type are selected based on your clicking action. However, you can change that by choosing another vertex type in the dropdown list.
You can also click the green plus sign at the right of the source and target vertex types section to add more source and target vertex types of the edge type.
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/edge-multi-pair.png)
By default, the edge type is undirected. To make the edge type directed, mark the Directed checkbox:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/directed-edge.png)
If Directed is checked, another checkbox will appear for you to choose whether the edge type should include reverse edges. Including reverse edges provides more flexibility when designing queries.
Unselect the reverse edge checkbox ONLY IF your machine memory is very tight, because if there is no reverse edge, queries will not be able to traverse backwards along this directed edge type from the target vertex to the source vertex.
Editing edge type attributes is the same as editing vertex type attributes.
Once you are satisfied with the edge type settings, click the checkmark button at the top to add the edge type, which will instantly appear in the working panel.
You can add multiple edge types between the same source vertex type and target vertex type pair. Moreover, an edge can use the same vertex type for both its source vertex type and its target vertex type, e.g., a Friendship edge from a Person vertex to Person vertex.
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#edit-vertex-or-edge-type-)Edit Vertex Or Edge Type
You can edit the vertex types or edge types at any time after you add them. Click one vertex type circle or one edge link, then click the edit button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/edit.png) or double-click on the selected vertex or edge. working space will enter Edit mode, allowing you to use the Edit Attributes panel to make the same kinds of changes as in the Add panel.
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/edit-panel.png)
After making your changes, click the checkmark button at the top to confirm your changes and update the graph.
In graph mode, you can only edit the style of a global vertex or edge type:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/view-panel.png)
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#delete-vertex-or-edge-type-)Delete Vertex Or Edge Type
You can delete a vertex type or an edge type by first choosing the vertex type circles or edge type links, then clicking the delete button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/delete_btn.png) . In order to delete multiple vertex types and edge types, hold down the "Shift" key while you select multiple items.
Note that user cannot delete a global vertex or edge type using the delete button in a graph.   
---  
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#redo-and-undo-)Undo and redo
You can undo and redo your changes with the undo and redo buttons: ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/redo_undo_btn.png) . history since the time you entered the Design Schema page is recorded.
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_view_global_vertex_and_edge_types)View global vertex and edge types
Click the view global vertex and edge types button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/view-global-type-button.png) to assign global vertex and edge types to a graph, or drop them from a graph. The working space will enter View Global Vertex and Edge Types mode. The add vertex type panel will appear to the right:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/view-global-types-panel.png)
Only a superuser or globaldesigner can modify global types in a graph. The view global vertex and edge types button will be disabled for other users.   
---  
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#publish-schema-)Publish schema
Once you are satisfied with the graph schema, click the publish schema button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/publish_btn.png) to publish the schema to the TigerGraph system. If you are publishing a brand new schema, a progress bar will appear:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/installing_schema_enterprise.png)
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema#_change_or_edit_an_existing_schema)Change or edit an existing schema
If a schema already exists, **Publish Schema** ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/publish_btn.png) will modify the existing schema.
If you have already loaded data into or created queries for an existing graph, **Publish Schema** will only retain your existing data in some circumstances.  
---  
If the change to a vertex or edge type is to add or remove attributes or attribute indexes, GraphStudio will employ a GSQL SCHEMA_CHANGE job and retain any graph data you already loaded.
For all other types of changes, including:
  * renaming a vertex or edge type
  * changing attribute name or data type
  * changing edge direction
  * adding or removing a reverse edge


GraphStudio will remove the old vertex or edge type and add the new one with your desired configurations. In that case, the loaded data to that vertex or edge type will be erased.
If a vertex type will be removed in order to change the schema, all edge types connected to that vertex type will also be removed.   
---  
When you are editing a graph schema, a warning message in the top-left side of the working panel will show which old vertex and edge types will be removed. Make sure to check the message periodically to make sure it is as you expect:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/affected_ve_types.png)
Finally, when you click publish schema button ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/publish_btn.png) , a pop up window will summarize your changes to the schema. The vertex and edge types that will be removed are highlighted. Make sure you confirm the changes before continue:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/screen-shot-2019-01-24-at-11.28.29-am.png)
Click continue button, and GraphStudio will start changing your schema:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/changing_schema.png)
If you have already created a data mapping and written queries, GraphStudio will try its best to preserve your work when you publish your modified schema:
  1. All your queries will be saved as query drafts, so you can install the queries again after you change your schema. If a query has a conflict with the new schema (e.g., referring to a vertex type that is deleted), you need to fix it before installing the query.
  2. GraphStudio will migrate your data mapping based on your changes to the schema. Since GraphStudio records your whole operation history, the migration is smart enough to cover most cases. The basic migration rules are the following:
    1. Rename vertex types and edge types
    2. Remove mappings to deleted vertex types and edge types.
    3. Remove mappings to deleted or modified attributes.
    4. New vertex types, edge types and new attributes won’t be mapped.
    5. After the schema is successfully published, GraphStudio will instruct you to go to the Map Data To Graph page to verify and publish the revised data mapping. If any mapping is not correct, you can fix it. You **must publish** the migrated data mapping; otherwise, it will be lost.


If you have published some data mapping through GraphStudio, then after schema is changed successfully, a pop up window will guide you to go to the Map Data To Graph page to confirm and publish the migrated data mapping:
![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/migrate_data_mapping.png)
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


